# timetable

./: .editorconfig  README.md  commands.py  config.py  date_parsers.py  factories.py  ff  firefly.py  output.py  requirements.txt  setup.cfg  sort_parsers.py  timetable.py
commands/: command.py
commands/tasks/: __init__.py  complete_task.py  get_tasks.py
commands/timetable/: __init__.py  event.py  export_timetable.py  get_timetable.py
firefly/: __init__.py  client.py  config.py  enums.py  events.py  factories.py  filters.py  fmt.py  input.py  resources.py  times.py
firefly/commands/: __init__.py  command.py
firefly/commands/auth/: __init__.py  auth.py  login.py  logout.py
firefly/commands/tasks/: complete_task.py  get_tasks.py  undo_task.py
firefly/commands/teachers/: __init__.py  get_teachers.py  search_directory.py
firefly/commands/timetable/: event.py  export_timetable.py  get_timetable.py
firefly/errors/: __init__.py  auth.py  config.py  error.py  input.py
firefly/parsers/: __init__.py  dates.py  enum.py  sort.py
parsers/: __init__.py  dates.py  enum.py  sort.py
