[metadata]
name = "Firefly Timetable"
version = 1.0

[options]
packages = find:
install_requires =
    aenum==2.2
    beautifulsoup4==4.9
    requests==2.25
    colorama==0.4
    dateparser=1.0
    lxml==4.6
    pylint==2.6
    python-dateutil==2.8
    regex==2020.11.13
    soupsieve==2.0
    yaspin==1.2
    sentry_sdk==0.19